--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -71,7 +71,7 @@ header{
 }
 
 .icon > i{
-    margin: 5px;
+    margin: 8px;
 }
 .logs > li{
     margin:5px;
@@ -135,6 +135,7 @@ body{
     margin-left:70px;
 }
 
+/* submit form for the default products */
 form.desc-btn{
     display: flex;
     flex-direction: column;
@@ -144,7 +145,7 @@ form.desc-btn{
     color:white;
     margin-left:-8px;
     margin-top:-10px;
-    align-self: flex-start;
+    align-self: center;
 }
 
 .buy{
@@ -158,6 +159,28 @@ form.desc-btn{
     text-align: center;
     margin-right:70px;
     cursor: pointer;
+}
+
+.add-to-cart{
+    background-color: lightblue;
+    color:black;
+    border-radius: 10px;
+    width:fit-content;
+    height: fit-content;
+    padding:8px;
+    text-align: center;
+    margin-right:70px;
+    margin-left: -50px;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
+/* the add to cart div */
+.buy-nd-cart{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .mordern-cont > img{
@@ -185,6 +208,12 @@ form.desc-btn{
     align-items: center;
     text-align: center;
     width:50%;
+}
+
+/* submit form in the big image container itself */
+.big-img > form.desc-btn{
+    margin:auto;
+    margin-top:-70px;
 }
 .big-img > img{
     width:70%;
@@ -252,7 +281,7 @@ form.desc-btn{
     height:fit-content;
     background-color: bisque;
     width: fit-content;
-    padding:8px;
+    padding:15px;
 }
 
 .review-txt{
@@ -264,7 +293,7 @@ form.desc-btn{
     flex-flow:row nowrap;
     justify-content: space-between;
     align-items: center;
-    padding:4px;
+    padding:5px;
     margin:8px;
     height:50px;
     text-align:center;
@@ -277,10 +306,21 @@ form.desc-btn{
 .review > div{
     margin:7px;
 }
+
+.rate-icon{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    padding: 8px;
+}
+
+
 .el{
     background-color:rgb(145, 15, 145);
     color:white;
-    height: 90%;
+    height: fit-content;
     padding:5px;
     width:17px;
 }
@@ -344,6 +384,12 @@ footer > div{
 }
 
 /* profile styling */
+
+/* profile icon on the index page */ 
+.profile{
+    width: 50px;;
+    padding:8px;
+}
 
 .profile-parent{
     display: flex;
