--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -19,6 +19,8 @@
                 <li><a href="#living-room">Living Room</a></li>
                 <li><a href="#kid-room">Kid Room</a></li>
             </ul>
+            <!-- profile link -->
+            <a href="{%url 'profile'%}" class="profile"><i class="fa-solid fa-image-portrait"></i></a>
             <!-- login logout buttons -->
             <div class="logs">
                 {%block login%}<li class="login"><a href="{%url 'login'%}">Login</a></li>{%endblock%}
