--- a/Ebackend/template/base.html
+++ b/Ebackend/template/base.html
@@ -29,7 +29,7 @@
             <!-- icon -->
             <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <a href="/checkout/" class="checkout"><i class="fa-solid fa-cart-shopping"></i></a>
                 <i class="fa-solid fa-bell"></i>
             </div>
             <!-- hamburgger -->
@@ -52,7 +52,7 @@
     </body>
     <footer>
         <div class="Links">
-            <h5 class="quick-links" onclick="displayLink()">Quick Links</h5>
+            <h5 class="quick-links" onclick="displayLink()">Quick Links <i class="fa-solid fa-angle-down"></i></h5>
             <div class="b-seller">
                 <a href='' id="be-a-vendor"> Be a vendor</a>
                 <a href='' id="registered-buyer">Register as a buyer</a>
