--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -19,7 +19,7 @@
                     <input type="hidden" name="product_img" value="../static/img/sofa1.jpg" style="display: none;">
                     <input type="hidden" name="product_id" value="1" style="display: none;" >
                     <input type="hidden" name="price" value="50" style="display: none;" >
-                    <input type="hidden" name="product_name" value="furniture" style="display: none;" >
+                    <input type="hidden" name="product_name" value="Pink Sofa" style="display: none;" >
                     <input type="submit" class="buy" value="Buy Now">
                 </form>
                 <div class="add-to-cart">Add to cart</div>
@@ -41,7 +41,7 @@
                     <input type="hidden" name="product_img" value="../static/img/sofa2.jpg" style="display: none;" >
                     <input type="hidden" name="product_id" value="2" style="display: none;" >
                     <input type="hidden" name="price" value="100" style="display: none;" >
-                    <input type="hidden" name="product_name" value="Second_furniture" style="display: none;" >
+                    <input type="hidden" name="product_name" value="Blue Sofa" style="display: none;" >
                     <input type="submit" class="buy" value="Buy Now">
                 </form>
                 <div class="add-to-cart">Add to cart</div>
