--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -216,8 +216,20 @@ overflow-x: scroll;
     margin-bottom: 30px;
 }
 
+.your-order{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+    align-self: flex-start;
+}
+
+#your-order, #p-image, #p-name{
+    margin: 15px;
+}
 .your-order > #p-img{
     width:100%;
     height: 100%;
-    border-radius: 10%;
+    border-radius: 10px;
 }
