--- a/Ebackend/template/profile.html
+++ b/Ebackend/template/profile.html
@@ -6,6 +6,11 @@
 
 {%block content%}
     <div class="profile-parent">
+        {%if msgs%}
+            {%for msg in msgs%}
+            <div {%if msg.tags%}class="{{msg.tags}} message"{%endif%}>{{msg}}</div>
+            {%endfor%}
+        {%endif%}
         <h5 id="hello">Hello {{name}}</h5>
         <!-- for vendors -->
         {%if name.vendorprofile%}
@@ -13,18 +18,40 @@
                 <img src="{{name.vendorprofile.profile_img.url}}" class="profile-pic" alt="profile-pic" type="img/jpg">
                 <h4 class="name">{{name}}</h4>
             </div>
+            <!-- current products -->
             <div class="product-flex">
-                <h5 id="your-products"> Your products</h5>
+                <h1 id="your-products"> Your products</h1>
                 <div class="your_products">
                     {%for item in name.product_set.all%}
                         <div class="products">
                             <h5 id="prod-name">{{item.product_name}}</h5>
                             <img src="{{item.product_image.url}}" alt="">
                             <p id="prod-dscr">{{item.product_description}}</p>
-                        <h3 id="price">${{item.price}}</h3>
+                            <h3 id="price">${{item.price}}</h3>
+                            <h5 id="prod-status">Status:{%if item.sold == False%}In stock{%else%} Sold{%endif%}</h5>
                         </div>
                     {%endfor%}
                 </div>
+            </div>
+            <!-- product upload section -->
+            <div class="add-products">
+                <h3 id="add-headsUp">Upload New Products for Sale, below.</h3>
+                <img src="" alt="product image"  class="product_img" style="display: none;">
+                <form action="{%url 'profile'%}" method="post" class="upload-form">
+                    {%csrf_token%}
+                    <label for="product image">Product Image</label><input type="file" accept="image/*" name="product_image" id="product_img" required>
+                    <label for="product name">Product Name</label><input type="text" name="product_name" required>
+                    <label for="product price">Product Price</label><input type="text" name="product_price" required>
+                    <label for="product category">Product category</label>
+                    <select name="category" required>
+                        <option value="mattress">Mattress</option>
+                        <option value="bed">Bedroom</option>
+                        <option value="living">Living Room</option>
+                        <option value="kid">Kid Room</option>
+                    </select>
+                    <label for="about">Describe this product</label><input type="text" name="description" required>
+                    <button type="submit">Upload Now?</button>
+                </form>
             </div>
         <!-- for buyers -->
         {%else%}
