--- a/Ebackend/static/css/signin_nd_up.css
+++ b/Ebackend/static/css/signin_nd_up.css
@@ -137,8 +137,8 @@ div.sign-up-guide{
     text-align: center;
     width:fit-content;
     padding:5px;
-    background-color: lightblue;
-    color:white;
+    background-color: rgb(81, 183, 218);
+    color:black;
     border-radius:15px;
 }
 
