Just tested out some api calls to randomly display image at the front page; will have to use django template context processor, cuz of the product categories being on a separate db table.

--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -100,44 +100,44 @@
             </div>
         </div>
     </section>
-    {%for product in products%}
+    <!-- {%for product in products%} -->
     <!-- mattresses -->
-        {%if product.category.category == mattress%}
-            <section class="mattress" id="mattress">
-                <div class="prodct">
-                    <img src="{{product.product_image.url}}" alt="no product">
-                    <h4 id="product-name">{{product.product_name}}</h4>
-                    {{product.category.category}}
-                </div>
-            </section>
-        {%elif product.category.category == bed%}
-            <!-- bedroom -->
-            <section class="bedroom" id="bedroom">
-                <div class="prodct">
-                    <img src="{{product.product_image.url}}" alt="no product">
-                    <h4 id="product-name">{{product.product_name}}</h4>
-                    {{product.category.category}}
-                </div>
-            </section>
-        {%elif product.category.category == living%}
-            <!-- living room -->
-            <section class="living-room" id="living-room">
-                <div class="prodct">
-                    <img src="{{product.product_image.url}}" alt="no product">
-                    <h4 id="product-name">{{product.product_name}}</h4>
-                    {{product.category.category}}
-                </div>
-            </section>
-        {%else%}
-            <!-- kid room -->
-            <section class="kid-room" id="kid-room">
-                <div class="prodct">
-                    <img src="{{product.product_image.url}}" alt="no product">
-                    <h4 id="product-name">{{product.product_name}}</h4>
-                    {{product.category.category}}
-                </div>
-            </section>
-        {%endif%}
-    {%endfor%}
+        <!-- <section class="mattress" id="mattress">
+            {%if product.category.category == mattress%}
+            <div class="prodct">
+                <img src="{{product.product_image.url}}" alt="no product">
+                <h4 id="product-name">{{product.product_name}}</h4>
+                {{product.category.category}}
+            </div>
+        </section> -->
+        <!-- bedroom -->
+        <!-- <section class="bedroom" id="bedroom">
+            {%elif product.category.category == bed%}
+            <div class="prodct">
+                <img src="{{product.product_image.url}}" alt="no product">
+                <h4 id="product-name">{{product.product_name}}</h4>
+                {{product.category.category}}
+            </div>
+        </section> -->
+        <!-- living room -->
+        <!-- <section class="living-room" id="living-room">
+            {%elif product.category.category == living%}
+            <div class="prodct">
+                <img src="{{product.product_image.url}}" alt="no product">
+                <h4 id="product-name">{{product.product_name}}</h4>
+                {{product.category.category}}
+            </div>
+        </section> -->
+        <!-- kid room -->
+        <!-- <section class="kid-room" id="kid-room">
+            {%else%}
+            <div class="prodct">
+                <img src="{{product.product_image.url}}" alt="no product">
+                <h4 id="product-name">{{product.product_name}}</h4>
+                {{product.category.category}}
+            </div>
+            {%endif%}
+        </section> -->
+    <!-- {%endfor%} -->
 </div>
     {%endblock%}
