--- a/Ebackend/template/checkout.html
+++ b/Ebackend/template/checkout.html
@@ -94,11 +94,11 @@
                     <img src="{{session_product.product_image.url}}" alt="your item" id="p-img">
                     <p id="p-name">{{session_product.product_name}}</p>
                 {%else%}
-                    <h3 id="no-item">Not Items in Cart</h3>
+                    <h3 id="no-item">{{no_item}}</h3>
                     <p id="instruct">Items you choose should appear here, {{user}}.</p>
                 {%endif%}
             {%else%}
-            <h3 id="no-item">Not Items in Cart!</h3>
+            <h3 id="no-item">{{no_item}}</h3>
             <p id="instruct">Items you choose should appear here.</p>
             {%endif%}
         {%endif%}
