--- a/Ebackend/static/css/style.css
+++ b/Ebackend/static/css/style.css
@@ -390,6 +390,11 @@ form.desc-btn{
     align-self: center;
     border-radius:15px;
     flex-grow: 1;
+    transition:all 0.5s;
+}
+
+.product >img:hover{
+    transform: scale(1.1);
 }
 
 .product > *{
@@ -502,13 +507,14 @@ footer > div{
 }
 .products{/*actual product container*/
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: left;
     border: solid 1px orange;
     border-radius: 10px;
-    padding:5px;
+    height: fit-content;
+    padding:8px;
 }
 .products >*{
     margin:3px;
