--- a/Ebackend/template/index.html
+++ b/Ebackend/template/index.html
@@ -143,7 +143,7 @@
         {%endfor%}
     </div>
     <div class="more-to-see">
-        <h1 id="more" style="text-align: center;">There's still more to see from Bchair</h1>
+        <h1 id="more">There's still more to see from Bchair</h1>
     </div>
 </div>
     {%endblock%}
